# labware-databank

./: .bumpversion.cfg  .flake8  .gitattributes  .gitlab-ci.yml  AUTHORS.md  DEVELOPMENT.md  Dockerfile  HISTORY.md  LICENSE  MANIFEST.in  Makefile  README.md  TODOs.md  docker-compose.yml  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tasks.py
SiLA/: labware_client.py  pyproject.toml  setup.py  strateos_labware.csv
SiLA/SiLA_features/: LabautomationService-v1_0.sila.xml  LabwareAutomationService-v1_0.sila.xml  LabwareOntologyService-v1_0.sila.xml  LabwareQueryService-v1_0.sila.xml
SiLA/labop_labware_sila/: __init__.py  __main__.py  server.py
SiLA/labop_labware_sila/feature_implementations/: __init__.py  labwareautomationservice_impl.py  labwareautomationservice_impl.py_old  labwareontologyservice_impl.py  labwarequeryservice_impl.py
docker/: Dockerfile.databank  Dockerfile.jupyterlab  Dockerfile_AWS  Dockerfile_multistage  Dockerfile_poetry  docker-compose.local.yml  docker-compose.yml  entrypoint_databank.sh  jupyter_server_config.json
docs/: 12_debugging_docker_networks.md  1_architecture.md  2_run_docker.md  3_installation_local.md  6_development.md  Makefile  authors.rst  conf.py  development.rst  history.rst  index.rst  installation.rst  ontologies.rst  usage.rst
jupyter/: SPARQL_explorer_dev.ipynb  SPARQL_labware_explorer.ipynb  SiLA_labware_explorer.ipynb  SiLA_labware_explorer_dev.ipynb  labop_labware_dev.ipynb  labop_labware_emmo  labop_labware_explore.ipynb  labop_labware_explorer.ipynb  labop_labware_explorer_dev.ipynb  labop_labware_tbox  labware_sila_client.ipynb  labware_sila_explorer.ipynb  owlready2_debugging.ipynb  strateos_labware.csv
labop_labware_ontology/: __init__.py  __main__.py  emmo_extension_tbox.py  emmo_utils.py  export_ontology.py  labop_labware_ontology_impl.py  labop_labware_ontology_interface.py  labware_abox.py  labware_tbox.py
labware_catalogues/: README.md  labop_labware_catalog.csv  labop_labware_catalog_mini.csv
ontologies/: labop_labware-v0.0.1.ttl  labop_labware_abox.ttl  (+4 more)
(+14 files in other folders)
