[project]
name = "labop_labware_sila"
version = "0.0.0"
requires-python = ">=3.7"
dependencies = [
    "sila2",
    "typer",
]

[build-system]
requires = ["setuptools>=0.61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["labop_labware_sila*"]

[tool.setuptools.package-data]
"labop_labware_sila.generated" = [
    "*/*.sila.xml",
    "*/*.proto",
]
